fix error: User 에러 ,  MVC 웹소켓 제거